--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.onlywatch.fleriche.onlywatch">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
@@ -21,7 +23,8 @@
             android:label="@string/title_activity_heroes"
             android:theme="@style/AppTheme" />
         <activity android:name=".test.HeroesFlipActivity" />
-        <activity android:name=".heroes.HeroesActivity"></activity>
+        <activity android:name=".heroes.HeroesActivity" />
+        <activity android:name=".HeroesFilterActivity"></activity>
     </application>
 
 </manifest>
