--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".general.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HeroesActivity" />
+        <activity android:name=".general.ConsultActivity" />
         <activity
             android:name=".test.HeroesActivity"
             android:label="@string/title_activity_heroes"
             android:theme="@style/AppTheme" />
         <activity android:name=".test.HeroesFlipActivity" />
-        <activity android:name=".heroes.HeroesActivity" />
-        <activity android:name=".HeroesFilterActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".HelpActivity"></activity>
+        <activity android:name=".general.ConsultActivity" />
+        <activity android:name=".heroes.HeroesFilterActivity" />
+        <activity android:name=".general.SettingsActivity" />
+        <activity android:name=".general.HelpActivity" />
+        <activity android:name=".maps.MapActivity"></activity>
     </application>
 
 </manifest>
